--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
     "react-otp-input": "^3.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-slideshow-image": "^4.2.1",
     "scss": "^0.2.4",
